Actualizacion de portafolio

--- a/styles.css
+++ b/styles.css
@@ -271,6 +271,13 @@ body {
    color: #c92a2a;
 }
 
+.icon--react {
+   color: #339af0;
+}
+.icon--react:hover {
+   color: #228be6;
+}
+
 .icon--database {
    color: #868e96;
 }
